Fix the issue with the footer cutting off form content in Safari

--- a/app/assets/stylesheets/islay/admin/layout.sass
+++ b/app/assets/stylesheets/islay/admin/layout.sass
@@ -23,7 +23,7 @@ body
     margin: 0 0 0 $body-margin-left
 
 body.has-footer #content
-  margin-bottom: $footer-height + 3em !important
+  padding-bottom: $footer-height * 1.5 !important
 
 /* -------------------------------------------------------------------------- */
 /* MAIN CONTENT BLOCKS
